feat: added non exisiting recipe details

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,6 +5,12 @@
     ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail [recipe]="selectedRecipe"></app-recipe-detail>
+    <app-recipe-detail
+      [recipe]="selectedRecipe"
+      *ngIf="selectedRecipe; else missingRecipe"
+    ></app-recipe-detail>
+    <ng-template #missingRecipe>
+      <p>please select another one</p>
+    </ng-template>
   </div>
 </div>
