--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,10 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a href="#" (click)="addIngredients(recipe.ingredients)"
+          <a
+            href="#"
+            style="cursor: pointer"
+            (click)="addIngredients(recipe.ingredients)"
             >To Shopping List</a
           >
         </li>
