--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,10 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li (click)="onRecipeClick()"><a href="#">Recipes</a></li>
-        <li (click)="onShoppingClick()"><a href="#">Shopping List</a></li>
+        <li routerLink="/recipes" routerLinkActive="active"><a>Recipes</a></li>
+        <li routerLink="/shopping-list" routerLinkActive="active">
+          <a>Shopping List</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
