--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,10 +3,7 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail
-      [recipe]="selectedRecipe"
-      *ngIf="selectedRecipe; else missingRecipe"
-    ></app-recipe-detail>
+    <router-outlet></router-outlet>
     <ng-template #missingRecipe>
       <p>please select another one</p>
     </ng-template>
