feat: added recipe routing

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
 <a
+  routerLink="{{ recipe.id }}"
+  routerLinkActive="active"
   class="list-group-item clearfix"
   (click)="onRecipeItemSelect(recipe)"
   style="cursor: pointer"
