--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,18 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLink="/recipes" routerLinkActive="active"><a>Recipes</a></li>
-        <li routerLink="/shopping-list" routerLinkActive="active">
+        <li
+          routerLink="/recipes"
+          routerLinkActive="active"
+          style="cursor: pointer"
+        >
+          <a>Recipes</a>
+        </li>
+        <li
+          routerLink="/shopping-list"
+          routerLinkActive="active"
+          style="cursor: pointer"
+        >
           <a>Shopping List</a>
         </li>
       </ul>
