--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,7 +2,7 @@
   routerLink="{{ recipe.id }}"
   routerLinkActive="active"
   class="list-group-item clearfix"
-  (click)="onRecipeItemSelect(recipe)"
+  (click)="onRecipeItemSelect()"
   style="cursor: pointer"
 >
   <div class="pull-left">
