--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -58,23 +58,29 @@
             class="row"
             *ngFor="let ingredient of controls; let i = index"
             [formGroupName]="i"
+            style="margin-top: 10px"
           >
             <div class="col-xs-8">
               <input
                 type="text"
                 class="form-control"
-                formControlName="ingredient.name"
+                formControlName="name"
               />
             </div>
             <div class="col-xs-2">
               <input
                 type="number"
                 class="form-control"
-                formControlName="ingredient.amount"
+                formControlName="amount"
               />
             </div>
             <div class="col-xs-2">
               <button class="btn btn-danger">X</button>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <button class="btn btn-success">Add Ingredient</button>
+              </div>
             </div>
           </div>
         </div>
