--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -61,11 +61,7 @@
             style="margin-top: 10px"
           >
             <div class="col-xs-8">
-              <input
-                type="text"
-                class="form-control"
-                formControlName="name"
-              />
+              <input type="text" class="form-control" formControlName="name" />
             </div>
             <div class="col-xs-2">
               <input
@@ -77,11 +73,19 @@
             <div class="col-xs-2">
               <button class="btn btn-danger">X</button>
             </div>
-            <div class="row">
-              <div class="col-xs-12">
-                <button class="btn btn-success">Add Ingredient</button>
-              </div>
-            </div>
+            <hr />
+          </div>
+        </div>
+        <hr />
+        <div class="row">
+          <div class="col-xs-12">
+            <button
+              class="btn btn-success"
+              type="button"
+              (click)="onIngredientAdded()"
+            >
+              Add Ingredient
+            </button>
           </div>
         </div>
       </div>
