--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,11 +23,13 @@
           >
         </li>
         <li>
-          <a style="cursor: pointer" routerLink="edit"
-            >Edit Recipe</a
+          <a style="cursor: pointer" routerLink="edit">Edit Recipe</a>
+        </li>
+        <li>
+          <a style="cursor: pointer" (click)="deleteRecipe(recipe.id)"
+            >Delete Recipe</a
           >
         </li>
-        <li><a style="cursor: pointer">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
