--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,8 +27,8 @@
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a (click)="onSave()">Save Data</a></li>
+            <li><a (click)="onFetchData()">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
