feat: added auth page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,13 @@
           <a>Recipes</a>
         </li>
         <li
+          routerLink="/auth"
+          routerLinkActive="active"
+          style="cursor: pointer"
+        >
+          <a>Authenticate</a>
+        </li>
+        <li
           routerLink="/shopping-list"
           routerLinkActive="active"
           style="cursor: pointer"
