feat: added ngrx to shopping list

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,13 +26,19 @@
           routerLink="/shopping-list"
           routerLinkActive="active"
           style="cursor: pointer"
+          *ngIf="isAuthenticated"
         >
           <a>Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a style="cursor: pointer" *ngIf="isAuthenticated" (click)="onLogout()">Logout</a>
+          <a
+            style="cursor: pointer"
+            *ngIf="isAuthenticated"
+            (click)="onLogout()"
+            >Logout</a
+          >
         </li>
         <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a class="dropdown-toggle" role="button"
