--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
           ></a>
           <ul class="dropdown-menu">
             <li><a (click)="onSave()">Save Data</a></li>
-            <li><a (click)="onFetchData()">Fetch Data</a></li>
+            <li><a>Fetch Data</a></li>
           </ul>
         </li>
       </ul>
