feat: added recipes store

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,7 +45,7 @@
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a (click)="onSave()">Save Data</a></li>
+            <li><a>Save Data</a></li>
             <li><a>Fetch Data</a></li>
           </ul>
         </li>
